k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vineeta-frontend
  namespace: grupp1
  labels:
    app: vineeta-frontend
    tier: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: vineeta-frontend
  template:
    metadata:
      labels:
        app: vineeta-frontend
        tier: frontend
    spec:
      containers:
        - name: vineeta-frontend
          image: ghcr.io/vineeta05/frontend-service:latest
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 128Mi
              cpu: 200m
      imagePullSecrets:
        - name: ghcr-secret
