k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vineeta-redis
  namespace: grupp1
  labels:
    app: vineeta-guestbook
    tier: cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vineeta-redis
  template:
    metadata:
      labels:
        app: vineeta-redis
        tier: cache
    spec:
      containers:
        - name: vineeta-redis
          image: docker.io/library/redis:7-alpine
          args:
            - redis-server
            - --requirepass
            - $(REDIS_PASSWORD)
          ports:
            - containerPort: 6379
              name: redis
          resources:
            limits:
              memory: 256Mi
              cpu: 200m
