k8s/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vineeta-postgresql
  labels:
    app: vineeta-guestbook
    tier: database
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: vineeta-postgresql
