k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vineeta-redis
  namespace: grupp1
  labels:
    app: vineeta-guestbook
    tier: cache
spec:
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app: vineeta-redis
