k8s/services.yaml
# Combined Services for backend + frontend
apiVersion: v1
kind: Service
metadata:
  name: vineeta-backend
  labels:
    app: vineeta-guestbook
    tier: backend
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: vineeta-backend
---
apiVersion: v1
kind: Service
metadata:
  name: vineeta-frontend
  labels:
    app: vineeta-guestbook
    tier: frontend
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: vineeta-frontend
