k8s/route-frontend.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vineeta-guestbook-frontend
  labels:
    app: vineeta-guestbook
    tier: frontend
spec:
  to:
    kind: Service
    name: vineeta-frontend
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
